--- a/Discover-Bank-Phone/res/layout/select_payee.xml
+++ b/Discover-Bank-Phone/res/layout/select_payee.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:fillViewport="true">
+    android:layout_height="match_parent"
+    android:fillViewport="true" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,25 +22,23 @@
         <TextView
             android:id="@+id/select_payee_title"
             style="@style/page_title"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="@dimen/table_inner_padding"
             android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_marginTop="@dimen/groups_of_elements_padding"
             android:layout_toLeftOf="@+id/help"
-            android:text="@string/select_payee_title" />
+            android:text="@string/select_payee_title" />        
 
-        <TextView
-            android:id="@+id/no_payees"
-            style="@style/normal_static_text"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/select_payee_title"
-            android:text="@string/select_payee_empty"
-            android:visibility="gone" />
-
-        <TextView
+            android:orientation="vertical" >
+            
+            <TextView
             android:id="@+id/payee_error_text"
             style="@style/error_static_text"
             android:layout_width="wrap_content"
@@ -50,22 +48,30 @@
             android:paddingBottom="@dimen/between_related_elements_padding"
             android:visibility="gone" />
 
-        <LinearLayout
-            android:id="@+id/payee_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/payee_error_text"
-            android:orientation="vertical"
-            android:paddingRight="@dimen/forms_inner_padding" />
+            <TextView
+                android:id="@+id/no_payees"
+                style="@style/normal_static_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/select_payee_empty"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/payee_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingRight="@dimen/forms_inner_padding" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/add_payee"
             style="@style/call_to_action_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/payee_list"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/orange_button_margin_top"
+            android:layout_below="@+id/content"
+            android:layout_centerHorizontal="true"
             android:text="@string/select_payee_add_new" />
 
         <TextView
@@ -73,11 +79,11 @@
             style="@style/bank_blue_hyperlink_small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:layout_marginBottom="@dimen/orange_button_margin_top"
+            android:layout_alignParentBottom="true"
             android:layout_below="@+id/add_payee"
             android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/orange_button_margin_top"
+            android:layout_marginTop="@dimen/orange_button_margin_top"
             android:text="@string/feedback_text" />
     </RelativeLayout>
 
