--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -15,8 +15,9 @@
 
 	<!-- Select a payee strings -->
 	<string name="select_payee_title">Select Payee</string>
-	<string name="select_payee_empty">You currently have no payees set up.</string>
+	<string name="select_payee_empty">You have no payees set up. You must set up payees in order to pay bills.</string>
 	<string name="select_payee_add_new">Add New Payee</string>
+	<string name="select_payee_no_payees">Add a Payee</string>
 	
 	<!-- Review payments -->
 	<string name="review_payments_title">Review Payments</string>
