ID: US3617 Name: Bank Epic: Add Managed Payees TA: Add Payee Step 4 Page
Highlights:
-Fixed backpress for work-flow to always return to Search for Payee Page
-Updated AddPayeeServiceCall to use newly created class AddPayeeDetail

Tested:
-Tested BankEditDetail Widget when edit is tapped it shows the edit field and when edit is tapped again edit is hidden
-Tested layout is rendered correctly as specified by Comps
-Verified entire row is clickable and toggles between editable field and label
-Verified that if the Payee is a Managed Verified Payee the Payee Name is not editable in Page 4 of the work flow
-Verified all pages return to  Enter Payee Name Page
-Verified only one field is editable at a time
-Tested workflow navigation from step 1 all the way to step 4
-Tested that when Add Payee button is clicked all editable fields are hidden
-Tested Selected Managed Payee from step 3 is passed in to step 4 and displayed correctly as per comp
-Tested Invalid Characters - User enters a payee name in the input field and taps Add Payee.  Inline error message reads, "Invalid characters" in red. Invalid characters: <>()&;'"[]{}
-Tested Invalid Characters / Non Matching Errors - User completes the details and taps add payee button. User will receive the following inline error messages in red text and the input field will be outlined in red.
-Tested Validation of Nickname - Invalid characters 2 char min/30 char max. (client side) Validation after you leave the field. Invalid characters for a payee nickname: <>;"[]{}
- Tested Validation of Account # - Invalid account #  1 char min./32 char max.Client-side validation: Invalid characters for account number with a payee : (){}<>"'[]
- Tested Validation of Re-enter account # -  Non matching account # 1 char min./32 char max and Invalid characters for account number with a payee : (){}<>"'[]
- Tested Validation of Zip Code - Invalid zip code 5 digit numeric - validation after you leave the field

--- a/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
@@ -40,7 +40,7 @@
 	            android:layout_alignParentTop="true" 
 	            android:contentDescription="@null"/>
 	     
-	     <com.discover.mobile.bank.payees.PayeeSearchField
+	     <com.discover.mobile.bank.payees.PayeeValidatedEditField
 	         android:id="@+id/search_field"
 	         android:layout_width="fill_parent"
 	         android:layout_height="@dimen/input_field_height"
