--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -12,15 +12,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true" />
-        
+
         <TextView
             android:id="@+id/conflict_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/schedule_pay_header"
+            android:padding="@dimen/between_related_elements_padding"
             android:text="@string/schedule_pay_duplicate_payment"
             android:textColor="@color/error_indicator"
-            android:padding="@dimen/between_related_elements_padding"
             android:visibility="gone" />
 
         <LinearLayout
@@ -48,8 +48,7 @@
                     style="@style/title_copy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:text="Comcast" />
+                    android:layout_alignParentBottom="true" />
             </RelativeLayout>
 
             <include layout="@layout/divider_horizontal" />
@@ -73,13 +72,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:paddingRight="4dp"
-                    android:src="@drawable/blue_arrow_right" />
+                <include android:id="@+id/payment_acct_edit_button"
+                    layout="@layout/edit_view" />
 
                 <Spinner
                     android:id="@+id/payment_acct_spinner"
@@ -125,9 +119,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:background="@drawable/edit_text_default"
+                        android:imeOptions="flagNoExtractUi"
                         android:maxLines="1"
                         android:textColor="@color/black"
-                        android:imeOptions="flagNoExtractUi"
                         android:textCursorDrawable="@null" />
                 </LinearLayout>
 
@@ -145,59 +139,37 @@
 
             <!-- Deliver By -->
 
-            <RelativeLayout android:id="@+id/date_item" 
+            <RelativeLayout
+                android:id="@+id/date_item"
                 style="@style/schedule_pay_list_element"
-                android:gravity="center_vertical"  >
+                android:gravity="center_vertical" >
 
-                <LinearLayout
-                    android:id="@+id/date_llayout"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/date_title"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="4" >
+                    android:layout_alignParentTop="true"
+                    android:text="@string/schedule_pay_date" />
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="2"
-                        android:text="@string/schedule_pay_date" />
+                <TextView
+                    android:id="@+id/date_text"
+                    style="@style/title_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true" />
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:orientation="horizontal"
-                        android:paddingRight="7dp"
-                        android:weightSum="5" >
+                <include
+                    android:id="@+id/date_edit_button"
+                    layout="@layout/edit_view" />
 
-                        <EditText
-                            android:id="@+id/date_edit"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="@dimen/between_related_elements_padding"
-                            android:layout_weight="1"
-                            android:background="@drawable/edit_text_default"
-                            android:focusable="false"
-                            android:textColor="@color/black" />
-
-                        <ImageView
-                            android:id="@+id/date_icon"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight="4"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/calendar_icon" />
-                    </LinearLayout>
-                </LinearLayout>
                 <TextView
                     android:id="@+id/date_error"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/date_llayout"
                     android:text="@string/schedule_pay_invalid_date"
                     android:textColor="@color/error_indicator"
+                    android:paddingLeft="@dimen/between_related_elements_padding"
+                    android:layout_toRightOf="@id/date_title"
                     android:visibility="gone" />
             </RelativeLayout>
 
@@ -205,8 +177,7 @@
 
             <!-- Memo -->
 
-            <RelativeLayout
-                android:id="@+id/memo_element"
+            <RelativeLayout android:id="@+id/memo_element"
                 style="@style/schedule_pay_list_element" >
 
                 <TextView
@@ -216,13 +187,8 @@
                     android:layout_alignParentTop="true"
                     android:text="@string/schedule_pay_memo_opt" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:paddingRight="4dp"
-                    android:src="@drawable/blue_arrow_right" />
+                <include android:id="@+id/memo_edit_button"
+                    layout="@layout/edit_view" />
 
                 <TextView
                     android:id="@+id/memo_text"
@@ -238,12 +204,12 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/memo_title"
                     android:background="@drawable/edit_text_default"
+                    android:imeOptions="flagNoExtractUi"
                     android:inputType="textWebEditText"
                     android:maxLength="40"
                     android:scrollHorizontally="false"
                     android:textColor="@color/black"
                     android:textCursorDrawable="@null"
-                    android:imeOptions="flagNoExtractUi"
                     android:visibility="invisible" />
             </RelativeLayout>
         </LinearLayout>
