--- a/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
+++ b/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
@@ -2,12 +2,12 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollView1"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@drawable/light_gray_bkgrd" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/light_gray_bkgrd"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:padding="@dimen/forms_inner_padding" >
@@ -16,8 +16,8 @@
             android:id="@+id/account_security_server_error"
             style="@style/error_label"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:text="@string/account_security_answer_doesnt_match"/>
+            android:layout_height="wrap_content"
+            android:text="@string/account_security_answer_doesnt_match" />
 
         <TextView
             android:id="@+id/account_security_label"
@@ -54,6 +54,7 @@
             android:layout_marginTop="@dimen/between_related_elements_padding"
             android:hint="@string/empty"
             android:imeOptions="actionDone"
+            android:maxLength="20"
             android:inputType="textNoSuggestions"
             android:textCursorDrawable="@null" />
 
@@ -134,6 +135,7 @@
             android:layout_below="@+id/account_security_remember_device_label"
             android:layout_marginTop="@dimen/between_related_elements_padding"
             android:background="@drawable/rounded_table_corners_no_padding"
+            android:paddingLeft="@dimen/groups_of_elements_padding"
             android:divider="@drawable/modal_divider_line"
             android:orientation="vertical" >
 
@@ -144,7 +146,10 @@
                 android:layout_height="wrap_content"
                 android:button="@drawable/custom_radio_check"
                 android:checked="true"
-                android:padding="@dimen/forms_inner_padding"
+                android:paddingBottom="@dimen/forms_inner_padding"
+                android:paddingLeft="30dp"
+                android:paddingRight="@dimen/forms_inner_padding"
+                android:paddingTop="@dimen/forms_inner_padding"
                 android:text="@string/account_security_remember_me_text" />
 
             <View
@@ -159,7 +164,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:button="@drawable/custom_radio_check"
-                android:padding="@dimen/forms_inner_padding"
+                android:paddingBottom="@dimen/forms_inner_padding"
+                android:paddingLeft="30dp"
+                android:paddingRight="@dimen/forms_inner_padding"
+                android:paddingTop="@dimen/forms_inner_padding"
                 android:text="@string/account_security_dont_remember_me_text" />
         </RadioGroup>
 
