--- a/Discover-Commons/res/drawable/navigation_menu_section_gradient.xml
+++ b/Discover-Commons/res/drawable/navigation_menu_section_gradient.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-		android:startColor="@color/menu_light_gray"
-		android:endColor="@color/menu_dark_gray"
-		android:angle="90" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item>
+        <shape>
+            <gradient
+                android:angle="90"
+                android:endColor="@color/menu_dark_gray"
+                android:startColor="@color/menu_light_gray" />
+        </shape>
+    </item>
+
+</layer-list>
