ID: US3617 Name: Bank Epic: Add Managed Payees
HighLights
Added navigation to BankAddPayeeConfirmFragment in BankNavigator
Added handling of BankAddPayeeServiceCall success to BankNetworkServiceCallManager
Added handler for canceling adding a Payee in BankAddPayeeFragment
Added method to BankEditDetail to set text.
Added method to clear text from BankEnterPayment when user navigates away from page
Added method to PayeedDetailLIstGenerator to generate a list for content in PayeeAddPayeeConfirmFragment

Testing:
Tested searchfield is cleared after adding a Payee and user navigates back to Step 2 in work flow
Tested Cancel Confirmation modal - Cancel This Action takes user back to step 2 in workflow
Tested Cancel Confirmation modal - Don't Cancel dismisses the modal
Tested Selecting a Payee that does not require a Zip Code and make sure Zip Code is not shown.
Tested Navigation from Add Payee to Confirm Page and made sure content is displayed accurately based on what is sent back from server.
Tested Search Payees with No matches
Tested Back-Press for Step 4 navigates user back to Enter Payee - Add Payee Step 2
Tested Back-Press for Step 4 navigates user back to Enter Payee - Add Payee Step 2
Tested Add Payee 201 Created
Tested Add Payee 400 Bad Request - Catch all modal displayed
Tested Add Payee 403 Forbidden - Catch all modal displayed
Tested Add Payee 401 StrongAuth
Tested Add Payees 401 Invalid Token
Tested Add Payees 503 Scheduled Maintenance

--- a/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:fillViewport="true"
     android:layout_height="match_parent" >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/forms_inner_padding" 
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/forms_inner_padding" 
+        android:paddingLeft="@dimen/forms_inner_padding" 
+        android:paddingRight="@dimen/forms_inner_padding" 
+        android:paddingBottom="@dimen/orange_button_margin_top"
         android:background="@drawable/light_gray_bkgrd">
 
         <ImageButton
@@ -68,10 +72,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:paddingBottom="@dimen/orange_button_margin_top"
             android:layout_below="@+id/enter_payee_details"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
+            android:gravity="bottom"
             android:text="@string/feedback_text" />
         
     </RelativeLayout>
