--- a/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
@@ -33,8 +33,17 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/forms_inner_padding" >
 
+             <TextView 
+                android:id="@+id/top_note_text"
+                android:layout_marginBottom="@dimen/groups_of_elements_padding"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/note_title"
+                style="@style/field_copy"/>
+             
             <LinearLayout
                 android:id="@+id/content_table"
+                android:layout_below="@+id/top_note_text"
                 style="@style/customer_service_table"
                 android:layout_centerHorizontal="true"
                 android:layout_width="fill_parent"
@@ -44,7 +53,7 @@
             <TextView 
                 android:id="@+id/note_text_title"
                 android:layout_below="@+id/content_table"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:layout_marginTop="@dimen/groups_of_elements_padding"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/note_title"
