--- a/Discover-Commons/res/layout/action_bar_menu_layout.xml
+++ b/Discover-Commons/res/layout/action_bar_menu_layout.xml
@@ -71,7 +71,8 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:background="@drawable/log_out_button"
+        android:layout_above="@+id/gradient_line"
         android:text="@string/log_out"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </RelativeLayout>
