US5343 : Enrollment: Accept Terms / Terms & Conditions - TA11664 : Created a Fragment that holds a WebView to display the terms and conditions content. This WebView is populated with content downloaded from a static URL that may be subject to change. It supports orientaiton and notifies the user of the web view loading by showing a ProgressBar (spinner). TA11665 : Service Call. Implemented a GET and POST request for this user story. The GET request is in place to handle requesting the content if an API call is needed (it was originally). The POST request is pointed towards the API call to accept the terms of service. Upon a successul POST, the user will be navigated to the desired destination (Pay Bills if they chose that from the menu or manage payees).

--- a/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
+++ b/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
@@ -1,18 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/light_gray_bkgrd" >
 
     <RelativeLayout
+        android:id="@+id/header"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/forms_inner_padding"
+        android:paddingRight="@dimen/forms_inner_padding"
+        android:paddingTop="@dimen/forms_inner_padding" >
+
+        <TextView
+            android:id="@+id/select_payee_title"
+            style="@style/page_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/help"
+            android:text="@string/welcome_to_pay_bills" />
+
+        <ImageButton
+            android:id="@+id/help"
+            style="@style/orange_help_button"
+            android:layout_width="@dimen/orange_help_button_size"
+            android:layout_height="@dimen/orange_help_button_size"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/empty" />
+    </RelativeLayout>
+
+    <WebView
+        android:id="@+id/agreement_web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-        
-        <TextView 
+        android:layout_height="match_parent"
+        android:layout_above="@+id/footer"
+        android:layout_below="@+id/header"
+        android:layout_marginLeft="@dimen/forms_inner_padding"
+        android:layout_marginRight="@dimen/forms_inner_padding"
+        android:cacheColorHint="#00000000"
+        android:visibility="invisible" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp" 
+        android:background="@drawable/shadow_gradient"
+        android:layout_above="@+id/footer"/>
+
+    <RelativeLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/field_stroke"
+        android:padding="@dimen/forms_inner_padding" >
+
+        <Button
+            android:id="@+id/accept_button"
+            style="@style/call_to_action_theme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/accept" />
+
+        <TextView
+            android:id="@+id/acceptance_label"
+            style="@style/sub_copy_small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/accept_button"
+            android:layout_marginLeft="@dimen/between_related_elements_padding"
+            android:layout_toRightOf="@+id/accept_button"
+            android:text="@string/acceptance_text"
+            android:textColor="@color/sub_copy"
+            android:textSize="@dimen/small_copy_mid" />
+    </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Payment Terms and Conditions"/> 
-        
-    </RelativeLayout>
-    
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
 
-</ScrollView>
+</RelativeLayout>
