DE2244L Fixed the logout button showing at the top of the screen by default.

--- a/Discover-Commons/res/layout/action_bar_menu_layout.xml
+++ b/Discover-Commons/res/layout/action_bar_menu_layout.xml
@@ -73,6 +73,6 @@
         android:background="@drawable/log_out_button"
         android:layout_above="@+id/gradient_line"
         android:text="@string/log_out"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </RelativeLayout>
