DE1864 : Bank User ID stays in Card. Now when a user switches between Card and Bank login, the respective IDs are loaded into the input fields. DE2271 : After attempting to login with a locked account and save user id checked, the user ID would persist if switching from bank to card. DE1927 : Incorrect handling of User ID and Password between card/bank login toggles. Toggling between card and bank does not persist IDs or passwords anymore. A saved ID will be resored if one was saved and the save id checkmark was set. User IDs will be deleted from storage if the check mark is unchecked and the login options are toggled. DE2303&DE2304 : Error state was persisting across bank and card logins. Now when you toggle from Bank or Card the login screen errors get reset. DE

--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -65,7 +65,7 @@
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:layout_marginTop="@dimen/groups_of_elements_padding"
-		            android:textColor="@color/red"
+		            style="@style/error_label"
 		            android:layout_below="@+id/discoverLogo"
 		            android:visibility="gone" />
 
