--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -4,7 +4,7 @@
         Customer Service
     </string>
     <string name="privacy_and_security">
-        Privacy &amp; Security
+        Privacy &amp;\n Security
     </string>
     <string name="register_now">
         Register\nNow
