ID: DE2247 Strong Auth Wrap-up: Remove Provide Feedback, as per Acceptance Criteria ID: DE2248 Strong Auth Wrap-up: Spacing of green checkmark Baseline ID: DE2249 Strong Auth Wrap-up: Spacing of green checkmark Non-baseline
Tested:
- Verified Feedback link is not shown in strong auth page
- Verified distance of check box to text look like comps on a Nexus
- Verified new string for when user enters an empty string "The answer does not match your Account information."

--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -20,4 +20,6 @@
     <!-- Status bar height -->
     <dimen name="status_bar_height">40dp</dimen>
     
+    <!-- RadioGroup Image Inner Padding -->
+    <dimen name="radio_group_inner_padding">25dp</dimen>
 </resources>
