--- a/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
+++ b/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
@@ -21,7 +21,7 @@
 
         <TextView
             android:id="@+id/account_security_label"
-            style="@style/title_copy"
+            style="@style/page_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/account_security_server_error"
@@ -135,7 +135,6 @@
             android:layout_below="@+id/account_security_remember_device_label"
             android:layout_marginTop="@dimen/between_related_elements_padding"
             android:background="@drawable/rounded_table_corners_no_padding"
-            android:paddingLeft="@dimen/groups_of_elements_padding"
             android:divider="@drawable/modal_divider_line"
             android:orientation="vertical" >
 
@@ -147,7 +146,8 @@
                 android:button="@drawable/custom_radio_check"
                 android:checked="true"
                 android:paddingBottom="@dimen/forms_inner_padding"
-                android:paddingLeft="30dp"
+                android:paddingLeft="@dimen/radio_group_inner_padding"
+                android:layout_marginLeft="@dimen/forms_inner_padding"
                 android:paddingRight="@dimen/forms_inner_padding"
                 android:paddingTop="@dimen/forms_inner_padding"
                 android:text="@string/account_security_remember_me_text" />
@@ -165,7 +165,8 @@
                 android:layout_marginTop="4dp"
                 android:button="@drawable/custom_radio_check"
                 android:paddingBottom="@dimen/forms_inner_padding"
-                android:paddingLeft="30dp"
+                android:paddingLeft="@dimen/radio_group_inner_padding"
+                android:layout_marginLeft="@dimen/forms_inner_padding"
                 android:paddingRight="@dimen/forms_inner_padding"
                 android:paddingTop="@dimen/forms_inner_padding"
                 android:text="@string/account_security_dont_remember_me_text" />
@@ -183,6 +184,7 @@
             android:onClick="submitSecurityInfo"
             android:text="@string/continue_text" />
 
+        <!-- This has been made gone for the time being as it is not requred for this page  -->
         <TextView
             android:id="@+id/provide_feedback_button"
             style="@style/bank_blue_hyperlink_small"
@@ -192,7 +194,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/orange_button_margin_top"
             android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:text="@string/feedback_text" />
+            android:text="@string/feedback_text"
+            android:visibility="gone" />
     </RelativeLayout>
 
 </ScrollView>
