--- a/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
@@ -118,7 +118,7 @@
         <ToggleButton
             android:id="@+id/posted_button"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/toggle_button_height"
             android:layout_weight="1"
             android:background="@drawable/toggle_left_on"
             android:checked="true"
@@ -133,7 +133,7 @@
         <ToggleButton
             android:id="@+id/scheduled_button"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/toggle_button_height"
             android:layout_weight="1"
             android:background="@drawable/toggle_right_off"
             android:checked="false"
