--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -29,6 +29,28 @@
             android:layout_marginBottom="@dimen/between_related_elements_padding"
             android:layout_weight="0.875"
             android:orientation="vertical" />
+        
+         <Button
+            android:id="@+id/openAccount"
+            style="@style/call_to_action_theme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/openAccountDetails"
+            android:drawableRight="@drawable/external_link_icon"
+            android:layout_marginTop="@dimen/modal_top_margin"
+            android:drawablePadding="@dimen/between_related_elements_padding"
+            android:layout_gravity="center"
+            android:text="@string/bank_open_account" />
+
+         <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/provide_feedback_button"
+                android:layout_marginTop="@dimen/modal_footer_topmargin">
+                
+                <include layout="@layout/old_general_need_help_footer" android:id="@+id/need_help_footer"/>
+        </RelativeLayout> 
 
         <TextView
             android:id="@+id/provide_feedback_button"
