--- a/Discover-Bank-Phone/res/layout/bank_status_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_status_view.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/error_icon_red" 
+        android:src="@drawable/red_x_circle" 
         style="@style/modal_error_image"/>
 
     <TextView
