--- a/Discover-Commons/res/layout/action_bar_menu_layout.xml
+++ b/Discover-Commons/res/layout/action_bar_menu_layout.xml
@@ -61,7 +61,7 @@
         android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/log_out_button"
+        android:background="@drawable/logout_button_drawable"
         android:layout_above="@+id/gradient_line"
         android:text="@string/log_out"
         android:visibility="gone" />
