DE2355: Fixed the placement of the help button

--- a/Discover-Bank-Phone/res/layout/status_bar.xml
+++ b/Discover-Bank-Phone/res/layout/status_bar.xml
@@ -22,7 +22,7 @@
         android:layout_width="@dimen/orange_help_button_size"
         android:layout_height="@dimen/orange_help_button_size"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="@dimen/between_related_elements_padding"
         android:layout_marginRight="@dimen/between_related_elements_padding"
         android:background="@drawable/question_mark_icon" />
 
