DE2383 : Added missing assets to the project from a ZIP file sent by Mark to Kelly on 2/20/2013. Updated the arrows in the ViewPager to use the new assets. Now the buttons are visually disabled when the user is at the first or last element of the list. Added an unregister receiver to the login activity to unregister the service that monitors the screen turning off.

--- a/Discover-Bank-Phone/res/layout/account_item_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/account_item_detail_view.xml
@@ -31,22 +31,21 @@
 
             <ImageView
                 android:id="@+id/previous_button"
-                style="@style/white_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/next_button"
                 android:contentDescription="@string/empty"
-                android:src="@drawable/drk_blue_arrow_left_square" />
+                android:src="@drawable/left_page_control" />
 
             <ImageView
                 android:id="@+id/next_button"
-                style="@style/white_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/between_related_elements_padding"
                 android:layout_marginRight="@dimen/groups_of_elements_padding"
                 android:layout_toLeftOf="@+id/help_button"
                 android:contentDescription="@string/empty"
-                android:src="@drawable/drk_blue_arrow_right_square" />
+                android:src="@drawable/right_page_control" />
 
             <TextView
                 android:id="@+id/joint_account_warning_label"
