--- a/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
@@ -2,88 +2,78 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/home_list_item_no_stroke">
+    android:background="@drawable/home_list_item_no_stroke" >
 
     <View
         android:id="@+id/divider_line"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/list_item"
-        android:background="@drawable/table_dotted_line"/>
-    
+        android:background="@drawable/table_dotted_line" />
+
     <RelativeLayout
         android:id="@+id/list_item"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/forms_inner_padding"
         android:layout_marginLeft="@dimen/forms_inner_padding"
         android:layout_marginRight="@dimen/forms_inner_padding"
-        android:paddingBottom="@dimen/forms_inner_padding">
+        android:paddingBottom="@dimen/forms_inner_padding"
+        android:paddingTop="@dimen/forms_inner_padding" >
 
         <TextView
             android:id="@+id/top_label"
             style="@style/field_copy"
-            android:singleLine="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:singleLine="true"
             android:text="@string/edit" />
 
         <TextView
             android:id="@+id/middle_label"
-            android:singleLine="true"
             style="@style/body_copy_title_max"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/top_label"
-            android:layout_toLeftOf="@+id/edit_label"
             android:layout_alignLeft="@+id/top_label"
+            android:layout_below="@+id/top_label"
             android:layout_marginRight="@dimen/between_related_elements_padding"
-            android:text="@string/edit" />
-        
-        <com.discover.mobile.bank.payees.PayeeValidatedEditField
-	         android:id="@+id/editable_field"
-	         android:singleLine="true"
-	         android:layout_width="wrap_content"
-	         android:layout_height="@dimen/input_field_height"
-	         android:layout_below="@+id/middle_label"
-	         android:layout_alignLeft="@+id/top_label"
-	         android:layout_toLeftOf="@+id/edit_label"
-	         android:imeOptions="actionDone"
-	         android:inputType="textNoSuggestions"
-	         android:layout_marginRight="@dimen/between_related_elements_padding"
-	         android:textCursorDrawable="@null"/>
-        
-        <TextView
-	         android:id="@+id/error_label"
-	         style="@style/error_label"
-	         android:singleLine="true"
-	         android:layout_alignLeft="@+id/top_label"
-	         android:layout_below="@+id/editable_field"
-	         android:layout_width="wrap_content"
-	         android:layout_height="wrap_content" 
-	         android:layout_alignParentBottom="true"
-	         android:text="@string/bank_invalid_characters"/>
-        
-        <TextView
-            android:id="@+id/edit_label"
-            style="@style/blue_hyperlink_smallest"
-            android:layout_width="wrap_content"
+            android:layout_toLeftOf="@+id/edit_label"
             android:singleLine="true"
+            android:text="@string/edit" />
+
+        <com.discover.mobile.bank.payees.PayeeValidatedEditField
+            android:id="@+id/editable_field"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/input_field_height"
+            android:layout_alignLeft="@+id/top_label"
+            android:layout_below="@+id/middle_label"
+            android:layout_marginRight="@dimen/between_related_elements_padding"
+            android:layout_toLeftOf="@+id/edit_label"
+            android:imeOptions="actionDone"
+            android:inputType="textNoSuggestions"
+            android:singleLine="true"
+            android:textCursorDrawable="@null" />
+
+        <TextView
+            android:id="@+id/error_label"
+            style="@style/error_label"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/caret"
+            android:layout_alignLeft="@+id/top_label"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/editable_field"
+            android:singleLine="true"
+            android:text="@string/bank_invalid_characters" />
+
+        <ImageView
+            android:id="@+id/caret"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:paddingRight="@dimen/between_related_elements_padding"
-            android:text="@string/bank_payee_edit"/>
-        
-        <View
-	        android:id="@+id/caret"
-	        android:layout_width="10dp"
-	        android:layout_height="10dp"
-	       	android:layout_centerVertical="true"
-	        android:layout_alignParentRight="true"
-	        android:background="@drawable/blue_arrow_right"/>
+            android:contentDescription="@string/caret_description"
+            android:src="@drawable/blue_arrow_right" />
     </RelativeLayout>
 
 </RelativeLayout>
