DE2410:  Changed the title from Transaction Detail to Transaction Details.

--- a/Discover-Bank-Phone/res/values/strings_transactions.xml
+++ b/Discover-Bank-Phone/res/values/strings_transactions.xml
@@ -17,6 +17,6 @@
     <string name="toggle_range">Range</string>
     <string name="dollar_sign">$</string>
     <string name="search">Search</string>
-    <string name="transaction_detail">Transaction Detail</string>
+    <string name="transaction_detail">Transaction Details</string>
     
 </resources>
