ID: DE2407 Name: Account Summary - accounts are labeled incorrectly
Testing:
-Tested all accounts in JSON are displayed in the view
-Balance should be equal to the sum of all accounts under group
	Sort Accounts by type:
	Table title names and what is included within each title (always plural)
	a)    Checking Accounts title includes: Checking
	b)    Savings Accounts title includes: Online Savings, MMA, CDs
	c)    Retirement Plans title includes: IRA, IRA CDs
	d)    Personal Loans title includes: Personal Loans
-Accounts are grouped by type according to existing business rules. Groups are sorted by existing rules (BAU). Nicknames for accounts are used as labels above the total for each account. Within groups, accounts are sorted alphabetically by nickname.
-Test formatting for group balance
-Test formatting of currency
-Test formatting of account number
-Test with several accounts in each group for each account type
-Text changes to red color if negative balance for group
-Text changes to red color if negative balance for account
-Total Balance is shown for group if more than one account
-If only one account is present within the group, suppress display of grouped total
-Only show account types that have an account associated with it
-Caret is removed and not clickable if IRA

--- a/Discover-Bank-Phone/res/values/strings_bank_account.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_account.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+    <!--  Account Summary Strings --> 
+    <string name="bank_savings_account">Savings Accounts</string>
+    <string name="bank_checking_account">Checking Accounts</string>
+    <string name="bank_ira_account">Retirement Plans</string>
+    <string name="bank_loan_account">Personal Loans</string>
+    <string name="bank_unknown_account">Other Accounts</string>
+     
     <!-- Account Activity Strings -->
     <string name="activity_screen_title">Account Activity</string>
     <string name="activity_title">Discover Online Checking</string>
