DE2405: Resized the carrot for the account summary.

--- a/Discover-Bank-Phone/res/layout/bank_account_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_view.xml
@@ -40,10 +40,10 @@
         android:text="@string/acct_balance_str"
         style="@style/page_title"/>
 	 
-	  <View
+	  <ImageView
         android:id="@+id/acct_carat"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/blue_arrow_right"/>
