--- a/Discover-Bank-Phone/res/layout/bank_account_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_view.xml
@@ -15,9 +15,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="@dimen/between_related_elements_padding"
-        android:layout_marginBottom="@dimen/between_related_elements_padding"
         android:text="@string/acct_nickname_str"
-        style="@style/normal_static_text"/>
+        style="@style/light_static_text"/>
 	 	 
 	  <TextView
         android:id="@+id/acct_ending"
@@ -28,7 +27,7 @@
         android:layout_toLeftOf="@+id/acct_carat"
         android:layout_margin="@dimen/between_related_elements_padding"
         android:text="@string/acct_ending_str"
-        style="@style/normal_static_text"/>
+        style="@style/light_static_text"/>
 	  	 
 	 <TextView
         android:id="@+id/acct_balance"
