--- a/Discover-Bank-Phone/res/layout/bank_table_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_table_item.xml
@@ -37,18 +37,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="right" />
+            android:gravity="right" 
+            android:lines="1"/>
     </LinearLayout>
-
-    <!--
-         <View
-	    android:id="@+id/dotted_line"
-   		android:layout_width="wrap_content"
-    	android:layout_height="1dp"
-	    android:background="@drawable/table_dotted_line"
-	    android:layout_alignParentRight="true"
-	    android:layout_alignParentLeft="true"
-	    android:layout_below="@+id/content"/>
-    -->
-
 </RelativeLayout>
