--- a/Discover-Bank-Phone/res/layout/bank_list.xml
+++ b/Discover-Bank-Phone/res/layout/bank_list.xml
@@ -4,12 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ListView
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        xmlns:ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/bank_table"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/light_gray_bkgrd"
         android:listSelector="@android:color/transparent" 
+        ptr:ptrDrawable="@null"
+        ptr:ptrShowIndicator="false"
         android:cacheColorHint="@android:color/transparent"/>
 
 </LinearLayout>
